--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
 
         <activity android:name=".ipc.service.binder.BinderServiceClientActivity"/>
+        <activity android:name=".ipc.service.ServiceActivity"/>
 
         <service android:name=".ipc.service.binder.CountService"/>
         <!--android:enabled="true" 是否可以被系统实例化-->
