--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,9 @@
         <activity android:name=".ipc.service.messenger.MessengerServiceClientActivity"/>
 
         <service android:name=".ipc.service.binder.BinderCountService"/>
-        <service android:name=".ipc.service.messenger.MessengerCountService"/>
+        <service
+            android:name=".ipc.service.messenger.MessengerCountService"
+            android:process=":remote"/>
         <!--android:enabled="true" 是否可以被系统实例化-->
         <!--android:exported 是否能被其他应用隐式调用-->
         <!--android:process 运行在的进程-->
