--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools"
           package="com.cn.lk.androidexp">
 
     <application
-        android:allowBackup="true"
+        android:name=".AppContext"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
+        tools:replace="android:allowBackup"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -20,11 +22,13 @@
         <activity android:name=".ipc.service.binder.BinderServiceClientActivity"/>
         <activity android:name=".ipc.service.ServiceActivity"/>
         <activity android:name=".ipc.service.messenger.MessengerServiceClientActivity"/>
+        <activity android:name=".ipc.service.foreground.ForegroundServiceClientActivity"/>
 
         <service android:name=".ipc.service.binder.BinderCountService"/>
         <service
             android:name=".ipc.service.messenger.MessengerCountService"
             android:process=":remote"/>
+        <service android:name=".ipc.service.foreground.ForegroundCountService"/>
         <!--android:enabled="true" 是否可以被系统实例化-->
         <!--android:exported 是否能被其他应用隐式调用-->
         <!--android:process 运行在的进程-->
