--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         tools:replace="android:allowBackup"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -26,12 +27,10 @@
         <activity android:name=".ipc.service.ServiceActivity"/>
         <activity android:name=".ipc.service.messenger.MessengerServiceClientActivity"/>
         <activity android:name=".ipc.service.foreground.ForegroundServiceClientActivity"/>
-        <activity android:name=".notification.NotificationActivity"/>
 
 
         <activity
-            android:name=".notification.SimpleNotificationActivity"
-            android:launchMode="singleTop"
+            android:name=".notification.NotificationActivity"
             android:parentActivityName=".MainActivity"
             tools:targetApi="jelly_bean">
             <meta-data
@@ -40,7 +39,14 @@
         </activity>
 
 
-
+        <activity
+            android:name=".notification.SimpleNotificationActivity"
+            android:parentActivityName=".notification.NotificationActivity"
+            tools:targetApi="jelly_bean">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".notification.NotificationActivity"/>
+        </activity>
 
         <service android:name=".ipc.service.binder.BinderCountService"/>
         <service
