--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,15 @@ dependencies {
 
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
     releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
+
+    compile 'com.squareup.retrofit2:retrofit:2.4.0'
+
+    compile 'io.reactivex.rxjava2:rxjava:2.1.0'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
+
+    compile 'com.google.code.gson:gson:2.8.2'
 }
