--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,12 +48,14 @@
         <activity android:name=".kotlin.SimpleKotlinActivity"/>
         <activity android:name=".kotlin.KotlinActivity"/>
         <activity android:name=".annotation.SupportAnnotationActivity"/>
+        <activity android:name=".thread.ThreadActivity"/>
 
         <service android:name=".ipc.service.binder.BinderCountService"/>
         <service
             android:name=".ipc.service.messenger.MessengerCountService"
             android:process=":remote"/>
         <service android:name=".ipc.service.foreground.ForegroundCountService"/>
+        <service android:name=".thread.MyIntentService"/>
         <!--android:enabled="true" 是否可以被系统实例化-->
         <!--android:exported 是否能被其他应用隐式调用-->
         <!--android:process 运行在的进程-->
