--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,6 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.1.1'
     compile 'com.birbit:android-priority-jobqueue:2.0.1'
     implementation project(':lib_log')
+
+    testCompile 'junit:junit:4.12'
 }
