--- a/gradle.properties
+++ b/gradle.properties
@@ -15,5 +15,7 @@
 #Mon Jul 02 11:22:19 CST 2018
 systemProp.http.proxyHost=127.0.0.1
 systemProp.http.nonProxyHosts=192.168.*
-org.gradle.jvmargs=-Xmx1536m
+org.gradle.jvmargs=-Xmx1536m -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005
 systemProp.http.proxyPort=1080
+
+org.gradle.daemon=true
