--- a/lib_compiler/build.gradle
+++ b/lib_compiler/build.gradle
@@ -2,9 +2,9 @@ apply plugin: 'java-library'
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation project(':lib_my_annotation')
     implementation 'com.google.auto.service:auto-service:1.0-rc4'
     implementation 'com.squareup:javapoet:1.11.1'
+    implementation project(':lib_annotation')
 }
 
 sourceCompatibility = "8"
